[gd_scene load_steps=7 format=2]

[ext_resource path="res://Piece.tscn" type="PackedScene" id=1]
[ext_resource path="res://arte/assets/barriles.png" type="Texture" id=2]
[ext_resource path="res://Pieces/BarrelPiece.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 202.739

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.6655, 58.3595 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.5321, 55.3854 )

[node name="BoxPiece" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="ExplosionArea" type="Area2D" parent="." index="0"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ExplosionArea" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
modulate = Color( 0.996078, 0.0509804, 0.0509804, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 2 )

[node name="icon" parent="." index="3"]
scale = Vector2( 0.426843, 0.426843 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_BoxPiece_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
